[Changes 1.2c01]

* Ensure that SHOW_AWAY_ONCE doesn't hide away status in /whois output. (caf)

* Fix the the -z command line option for specifying username. (flashback)

* Fix up /WILN, /WILC and /WILCR. (caf)

* Backport changes from epic5 to make recv_nick, sent_nick and sent_body 
  per-server, and apply new version of do_oops from flashback. This means
  that /oops, "/query .", "/query ,", "/msg ." and "/msg ," are per-server,
  along with the $. $, and $B aliases. (caf)

* Handle error return from getcwd() in /cd. (caf)

* Fix alloca warnings on freebsd. (caf)

* Fix memory leak in banlist.c. (caf)

* Apply a fix contributed by cpet for the configure script on
  FreeBSD 9. (caf)

* Fix a refcounting issue in the whowas list handling, which should make
  the listing of users that left in a netsplit right again. (caf)

* Improve argument-handling in /hostname command - now supports doing
  /hostname 2 to switch to second vhost. (caf)

* Change the display of server stats so that the averages (eg. users per
  channel) are correctly rounded. (caf)

* Reinstate RPL_WHOISACTUALLY numeric - things seem to have stabilised in
  the ircd world on this. (caf)

* Fixed two cases where the client was incorrectly deciding that a numeric
  originated from a remote server rather than the local server - this caused
  BitchX to falsely report channel desynch and incorrectly hide some
  numerics. (caf)

* Fixed $servernum() scripting function, it was returning the wrong server
  reference in most cases. (caf)

* [1.1s01] Fixed .cmsg crash reported by zimzum. (caf)

* Changed the defaults for JOIN_NEW_WINDOW_TYPE and QUERY_NEW_WINDOW_TYPE
  so that they work out of the box. (caf)

* Some cleanups in quit message handling, fixed a bug where a quit from an
  unexpected source could crash the client. (caf)

* Cleaned up the handling of channel mode changes a little, including fixing
  buggy handling of certain key and limit mode changes. (caf)
